# search-mersenne-prime

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile.dev  LICENSE  README.md  ci-build.sh  dev.dockerfile  main.cpp  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pipeline.yml
lib/: CMakeLists.txt  MersennePrimer.cpp  MersennePrimer.h
src/: CMakeLists.txt  MersennePrimer.cpp  MersennePrimer.h  main.cpp
tests/: CMakeLists.txt  MersennePrimer_test.cpp
